--- a/src/pages/Screen_Steps.page
+++ b/src/pages/Screen_Steps.page
@@ -4,7 +4,7 @@
 <apex:tab label="Help" name="user_settings">
 <iframe src="http://salesforcefoundation.screenstepslive.com/spaces/npsp" style="border-width:0 " width="1200" frameborder="0" height="1500"></iframe>
 </apex:tab>
-<apex:Tab label="More Help"/>
+<apex:Tab label="More Helps"/>
 
 
 </apex:TabPanel>
